[package]
name = "trsh"
version = "0.1.1"
authors = ["南浦月 <nanpuyue@gmail.com>"]
description = "A TLS encrypted Reverse Shell"
homepage = "https://github.com/nanpuyue/trsh"
repository = "https://github.com/nanpuyue/trsh.git"
keywords = ["reverse", "shell", "tls"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
libc = "0.2.80"
openssl = "0.10.30"
tokio = { version = "0.3.4", features = ["macros", "io-util", "net", "rt"] }
tokio-fd = "0.2.1"
tokio-openssl = "0.5.0"
